# bedrock-insights

./: .gitignore  BLOG.md  README.md  _chk.out  _token.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
bedrock_insights/: cli.py  client.py  cloudwatch.py  display.py  notify.py  pricing.py  setup_cmd.py  storage.py  web.py
bedrock_insights/static/: app.css  app.js  dashboard.html
deploy/: cloudformation.yaml
tests/: test_client.py  test_cloudwatch.py  test_notify.py  test_pricing.py  test_setup_cmd.py  test_storage.py  test_web.py  test_web_http.py
